<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.st00.afir.boardingpass.MainActivity">

    <TextView
        android:id="@+id/textViewPassengerLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/passenger_label" />

    <TextView
        android:id="@+id/textViewPassengerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/textViewPassengerLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassengerLabel"
        tools:text="@string/passenger_name" />

    <ImageView
        android:id="@+id/leftRectangle"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/left_rectangle_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <ImageView
        android:id="@+id/rightRectangle"
        android:layout_width="60dp"
        android:layout_height="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/right_rectangle_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName"
        app:srcCompat="@drawable/shape_rectangle_stroke" />

    <ImageView
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/divider"
        app:layout_constraintBottom_toTopOf="@id/leftRectangle"
        app:layout_constraintLeft_toRightOf="@id/leftRectangle"
        app:layout_constraintRight_toLeftOf="@id/rightRectangle"
        app:layout_constraintTop_toBottomOf="@id/leftRectangle" />

    <TextView
        android:id="@+id/textViewOrigin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toStartOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/leftRectangle"
        app:layout_constraintTop_toTopOf="@+id/divider"
        tools:text="@string/origin_code" />

    <TextView
        android:id="@+id/textViewDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="@+id/rightRectangle"
        app:layout_constraintStart_toEndOf="@+id/divider"
        app:layout_constraintTop_toTopOf="@+id/divider"
        tools:text="@string/destination_code" />

    <TextView
        android:id="@+id/textViewBoardingTimeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leftRectangle"
        tools:text="@string/boarding_time_label" />

    <TextView
        android:id="@+id/textViewBoardingTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2"
        app:layout_constraintStart_toStartOf="@+id/textViewBoardingTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel"
        tools:text="@string/boarding_time" />

    <TextView
        android:id="@+id/textViewDepartureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeValue"
        tools:text="@string/departure_time_label" />

    <TextView
        android:id="@+id/textViewDepartureValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorGood"
        app:layout_constraintStart_toStartOf="@+id/textViewDepartureLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewDepartureLabel"
        tools:text="@string/departure_time" />

    <TextView
        android:id="@+id/textViewBoardingInLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rightRectangle"
        tools:text="@string/boarding_in_label" />


    <TextView
        android:id="@+id/textViewBoardingInValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/colorBad"
        app:layout_constraintStart_toStartOf="@+id/textViewBoardingInLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInLabel"
        tools:text="@string/boarding_in_time" />

    <TextView
        android:id="@+id/textViewArrivalTimeLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textViewBoardingInValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInValue"
        tools:text="@string/arrival_time_label" />


    <TextView
        android:id="@+id/textViewArrivalTimeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorGood"
        app:layout_constraintStart_toStartOf="@+id/textViewArrivalTimeLabel"
        app:layout_constraintTop_toBottomOf="@+id/textViewArrivalTimeLabel"
        tools:text="@string/arrival_time" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textColor="@color/colorAccent"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        tools:text="@string/flight_code" />

    <ImageView
        android:id="@+id/imageViewBarCode"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:contentDescription="@string/barcode_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/barcode" />

    <ImageView
        android:id="@+id/imageViewPlane"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/plane_image"
        android:src="@drawable/ic_plane"
        app:layout_constraintEnd_toEndOf="@+id/divider"
        app:layout_constraintStart_toStartOf="@+id/divider"
        app:layout_constraintTop_toBottomOf="@+id/textViewPassengerName" />

    <ImageView
        android:id="@+id/imageViewTitle"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryLight"
        android:contentDescription="@string/title_infos"
        app:layout_constraintBottom_toTopOf="@+id/imageViewContent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDepartureValue" />

    <ImageView
        android:id="@+id/imageViewContent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorPrimaryDark"
        android:contentDescription="@string/content_infos"
        app:layout_constraintBottom_toTopOf="@+id/imageViewBarCode"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTitle" />

    <TextView
        android:id="@+id/textViewTerminal"
        android:layout_width="67dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewContent"
        app:layout_constraintStart_toStartOf="@+id/imageViewTitle"
        app:layout_constraintTop_toTopOf="@+id/imageViewTitle"
        tools:text="@string/terminal_label" />


    <TextView
        android:id="@+id/textViewGate"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewContent"
        app:layout_constraintEnd_toStartOf="@+id/textViewSeat"
        app:layout_constraintStart_toEndOf="@+id/textViewTerminal"
        app:layout_constraintTop_toTopOf="@+id/imageViewTitle"
        tools:text="@string/gate_label" />

    <TextView
        android:id="@+id/textViewSeat"
        android:layout_width="34dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageViewContent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewTitle"
        app:layout_constraintTop_toTopOf="@+id/imageViewTitle"
        tools:text="@string/seat_label" />

    <TextView
        android:id="@+id/textViewTerminalContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewContent"
        app:layout_constraintStart_toStartOf="@+id/textViewTerminal"
        app:layout_constraintTop_toBottomOf="@+id/textViewTerminal"
        tools:text="@string/terminal" />


    <TextView
        android:id="@+id/textViewGateContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewContent"
        app:layout_constraintStart_toStartOf="@+id/textViewGate"
        app:layout_constraintTop_toBottomOf="@+id/textViewGate"
        tools:text="@string/gate" />

    <TextView
        android:id="@+id/textViewSeatContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#FFF"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewContent"
        app:layout_constraintEnd_toEndOf="@+id/imageViewContent"
        app:layout_constraintStart_toStartOf="@+id/textViewSeat"
        app:layout_constraintTop_toBottomOf="@+id/textViewSeat"
        tools:text="@string/seat" />


</android.support.constraint.ConstraintLayout>
